Bugfixes tests, update mysql